Fix a layout issue on Linux

--- a/src/components/layouts/ProjectLayout/styles.module.scss
+++ b/src/components/layouts/ProjectLayout/styles.module.scss
@@ -4,10 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-
-  &.customTitlebar {
-    padding-top: $titlebarHeight;
-  }
+  padding-top: $titlebarHeight;
 
   .content {
     display: flex;
